// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiListGroupItem is rendered 1`] = `
<li
  class="euiListGroupItem euiListGroupItem-textOnly"
>
  <span
    class="euiListGroupItem__content"
  >
    <span
      class="euiListGroupItem__label"
    >
      <span>
        Label
      </span>
    </span>
  </span>
</li>
`;

exports[`EuiListGroupItem renders href 1`] = `
<li
  class="euiListGroupItem"
>
  <span
    class="euiListGroupItem__content"
  >
    <span
      class="euiListGroupItem__label"
    >
      <a
        class="euiListGroupItem__button"
        href="#"
      >
        Label
      </a>
    </span>
  </span>
</li>
`;
